--- a/static/tablestyle.css
+++ b/static/tablestyle.css
@@ -18,6 +18,7 @@ h2 small {
 }
 .responsive-table100{
     text-align: center;
+    padding: 0rem 1rem 1rem 1rem;
 }
 .responsive-table100 li {
     border-radius: 3px;
