--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,7 +7,7 @@
 html{
     scroll-behavior: smooth;
 }
-.logo100{
+/* .logo100{
     width:220px;
     display: flex;
     justify-content: center;
@@ -23,7 +23,7 @@ html{
     display: flex;
     align-items: center;
     /* justify-content: center; */
-    position: sticky;
+    /* position: sticky;
     top:0;
     cursor: pointer;
     z-index: 5;    
@@ -55,7 +55,7 @@ html{
     width: 30%;
     text-align: right;
     padding: 0 23px;
-}
+} */ 
 
 #search100{
     padding: 5px;
