--- a/views/admin1.pug
+++ b/views/admin1.pug
@@ -41,7 +41,7 @@ html
                 b Contact
             li.nav-item
               a.nav-link(href="/register") 
-                b Add_Admin
+                b Add Admin
             li.nav-item.dropdown
               a#navbarDropdown-dark.nav-link.dropdown-toggle(href='' role='button' data-bs-toggle='dropdown' aria-expanded='false')
                 | Logout
