--- a/views/index.pug
+++ b/views/index.pug
@@ -33,7 +33,7 @@ html(lang="en")
 						li.nav-item
 							a.nav-link(href='#contact') Contact
 						li.nav-item
-							a.nav-link(href='/admin1') Admin Pannel
+							a.nav-link(href='/admin1') Admin Panel
 					
 		
 		//- nav.navbar.navbar-expand-lg.navbar-dark.bg-dark.sticky-top
