--- a/views/index.pug
+++ b/views/index.pug
@@ -3,6 +3,11 @@ html(lang="en")
 	head
 		meta(charset="UTF-8")
 		meta(name="viewport" content="width=device-width, initial-scale=1.0")
+		meta(property='og:title' content='NSS UIET')
+		meta(property='og:description' content='NOT ME, BUT YOU')
+		
+		meta(property='og:image' content='../static/img/icons/nss_symbol_oCJ_icon.ico')
+
 		link(rel='icon' type='image/ico' href='../static/img/icons/nss_symbol_oCJ_icon.ico')
 		link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1' crossorigin='anonymous')
 		link(rel="stylesheet" href="../static/css/style.css")
