--- a/views/index.pug
+++ b/views/index.pug
@@ -5,8 +5,8 @@ html(lang="en")
 		meta(name="viewport" content="width=device-width, initial-scale=1.0")
 		meta(property='og:title' content='NSS UIET')
 		meta(property='og:description' content='NOT ME, BUT YOU')
-		
-		meta(property='og:image' content='https://nss.gov.in/sites/all/themes/youthaffair/logo.png')
+		meta(property='og:url' content='https://nss-uiet.herokuapp.com/')
+		meta(property='og:image' content='https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/NSS_Hand_Logo.jpg/220px-NSS_Hand_Logo.jpg')
 
 		link(rel='icon' type='image/ico' href='../static/img/icons/nss_symbol_oCJ_icon.ico')
 		link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1' crossorigin='anonymous')
