--- a/views/adminlist.pug
+++ b/views/adminlist.pug
@@ -71,17 +71,22 @@ html
     //-     .line
     .container100
       h2
-        | Contact Queries 
-        small NSS UIET
+        | Admins of NSS UIET
       ul.responsive-table100
         li.table-header100
-          .col100.col-1100 Name
-          .col100.col-2100 Email
-          .col100.col-3100 Phone
-          .col100.col-4100 Concern
-          .col100.col-5100 Status
-          .col100.col-6100 update status
+          .col100.col-1100 Admin Id
+    
         each collection in data
+          li.table-row100
+            .col100.col-1100(data-label="Admin")=collection.email
+            if collection.email!="gnitish31@gmail.com"
+              form(action='/deleteadmin/'+collection._id)
+                button.del-button100(type="submit")
+                  i.fa.fa-trash(aria-hidden='true')
+        form(action='/register')
+          button(type="submit"  style="background-color: #000000;border: none;color: white;padding: 15px 32px;text-align: center;text-decoration: none; display: inline-block;font-size: 16px;border-radius: 23px;width: 80%;")
+            | Add New Admin
+        //- each collection in data
           li.table-row100
             .col100.col-1100(data-label="Name")=collection.name
             .col100.col-2100(data-label="Email")=collection.email
