--- a/views/index.pug
+++ b/views/index.pug
@@ -163,7 +163,7 @@ html(lang="en")
 						.team-items100
 							each collection in team.data
 								.item100
-									img(src="../static/memberuploads/"+collection.imagename alt='team' style="height:300px; width:260px;")
+									img(src="../static/memberuploads/"+collection.imagename alt='team' class="teamsimage")
 									.inner100
 										.info100
 											h5=collection.name
