--- a/views/index.pug
+++ b/views/index.pug
@@ -167,7 +167,7 @@ html(lang="en")
 									.inner100
 										.info100
 											h5=collection.name
-											p=collection.position
+											//- p=collection.position
 											.social-links100
 												a(href=''+collection.twiter)
 													span.fa.fa-twitter
